--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.application.name=Servidor
-server.port= 8761
-# Estas dos líneas deben estar así para que Eureka no actúe como cliente de sí mismo
+spring.application.name=servidor
+server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.instance.prefer-ip-address=true
